# tools

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  deny.toml
crates/dtacheck/: Cargo.toml
crates/dtacheck/src/: lexer.rs  lib.rs  linter.rs  main.rs  parser.rs
crates/milo/: Cargo.toml
crates/milo/src/: ark.rs  fio.rs  lib.rs  main.rs  traits.rs
crates/milo/src/ark/: amp.rs  freq.rs
crates/swap_art_bytes/: Cargo.toml
crates/swap_art_bytes/src/: lib.rs  main.rs
python/build_template/: configure_build.py
swap_art_bytes/: Cargo.toml
syntax/notepad++/localh/: HarmonixDTA.xml
syntax/notepad++/thenathannator/: DataArray.xml
syntax/sublime/xenia/: DataArray.sublime-syntax
syntax/vim/dark/: README.md
syntax/vscode/ruggy/: dataarray-1.0.0.rar
