[package]
name = "dtacheck"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }

[dependencies.arson-parse]
version = "0.2.0"
git = "https://github.com/hmxmilohax/arson"
tag = "v0.2.0"
features = ["reporting"]
